# elastic-gpu-platform

./: .gitignore  Dockerfile.web  README.md  deploy.sh  destroy.sh  nlp_loadtest.py
agent/: Dockerfile  pyproject.toml
agent/app/: actions.py  agent.py  aws.py  config.py  control_loop.py  main.py  scheduler.py  state.py  weights.py
agent/app/tools/: aws_actions.py  guardrails.py
ami/: README.md  bake-ami.sh  model.env.example  nlp-fetch-model.service  nlp-fetch-model.sh  nlp-metrics-push.py  nlp-metrics-push.service  vllm.service
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: agent.py  auth.py  config.py  cost.py  ga.py  metrics.py  network.py  provisioning.py  schedules.py  spot.py
backend/app/core/: cognito_auth.py  config.py  jwt_validator.py
backend/app/db/: dynamo.py
backend/app/services/: provisioner.py
backend/app/services/aws/: autoscaling.py  ec2.py  elbv2.py  ga.py  session.py
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/config/: config.ts
cdk/lib/: cognito-stack.ts  dynamodb-stack.ts  ecs-stack.ts  globalaccelerator-stack.ts  monitoring-stack.ts  network-stack.ts
docs/: lean-ami-cold-start.md  lean-ami-runbook.md
frontend/: index.html  package.json  vite.config.ts
frontend/public/: test-report.html
frontend/src/: App.tsx  index.css
frontend/src/config/: amplify.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: AgentLog.tsx  Dashboard.tsx  EnvWizard.tsx  ErrorBoundary.tsx  Fleet.tsx  GlobalAccelerator.tsx  Login.tsx  Monitoring.tsx  Overview.tsx  (+3 more)
(+1 files in other folders)
