[project]
name = "nlp-platform-backend"
version = "0.1.0"
description = "NLP-Platform control-plane Web backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23"]
